added customer register
