# api/docs/swagger.yaml
@@ -123,6 +123,15 @@ definitions:
       refresh_token:
         type: string
     type: object
+  models.CustomerRegisterConfRequest:
+    properties:
+      customer:
+        $ref: '#/definitions/models.CreateCustomer'
+      mail:
+        type: string
+      otp:
+        type: string
+    type: object
   models.CustomerRegisterRequest:
     properties:
       mail:
@@ -869,6 +878,40 @@ paths:
           description: Created
           schema:
             $ref: '#/definitions/models.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: Customer register
+      tags:
+      - auth
+  /customer/register-confirm:
+    post:
+      consumes:
+      - application/json
+      description: Customer register
+      parameters:
+      - description: register
+        in: body
+        name: register
+        required: true
+        schema:
+          $ref: '#/definitions/models.CustomerRegisterConfRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.CustomerLoginResponse'
         "400":
           description: Bad Request
           schema:
